# allscale_runtime_prototype

./: .gitmodules  README.md
cmake/dependencies/: mpi.cmake
code/: CMakeLists.txt
code/example/: CMakeLists.txt
code/example/include/allscale_runtime_prototype/example/: answer.h
code/example/src/: answer.cpp  main.cxx
code/example/test/: answer_test.cc
code/prototype/: CMakeLists.txt
code/prototype/include/allscale/: runtime.hpp
code/prototype/include/allscale/runtime/: runtime.h
code/prototype/include/allscale/runtime/com/: hierarchy.h  network.h  node.h  node_service.h  statistics.h
code/prototype/include/allscale/runtime/com/hpx/: network.h
code/prototype/include/allscale/runtime/com/mpi/: network.h
code/prototype/include/allscale/runtime/com/sim/: network.h
code/prototype/include/allscale/runtime/data/: data_fragment_manager.h  data_item_index.h  data_item_location.h  data_item_manager.h  data_item_migration.h  data_item_reference.h  data_item_region.h  data_item_requirement.h  data_item_statistic.h
code/prototype/include/allscale/runtime/hw/: core.h  energy.h  frequency.h  frequency_scaling.h  model.h
code/prototype/include/allscale/runtime/log/: logger.h
code/prototype/include/allscale/runtime/mon/: dashboard.h  file_logger.h  task_stats.h
code/prototype/include/allscale/runtime/utils/: timer.h
code/prototype/include/allscale/runtime/work/: balancer.h  fiber_service.h  node_mask.h  optimizer.h  schedule_policy.h  scheduler.h  task.h  task_dependency.h  task_id.h  task_reference.h  task_requirements_collector.h  task_statistic.h  treeture.h  tuner.h  work_item.h  work_queue.h  worker.h
code/prototype/include/allscale/utils/: fiber.h  fibers.h  scalar.h  spinlock.h
code/prototype/include/allscale/utils/fiber/: future.h  read_write_lock.h
code/prototype/include/allscale/utils/serializer/: functions.h
code/prototype/src/: answer.cpp  runtime.cpp
code/prototype/src/com/: hierarchy.cpp  network.cpp  node.cpp  statistics.cpp
code/prototype/src/com/mpi/: network.cpp
code/prototype/src/com/sim/: network.cpp
code/prototype/src/data/: data_item_index.cpp  data_item_location.cpp  data_item_manager.cpp  data_item_migration.cpp  data_item_reference.cpp  data_item_region.cpp  data_item_requirement.cpp  data_item_statistic.cpp
code/prototype/src/hw/: core.cpp  energy.cpp  frequency_scaling.cpp  model.cpp
code/prototype/src/log/: logger.cpp
code/prototype/src/mon/: dashboard.cpp  file_logger.cpp  task_stats.cpp
code/prototype/src/tools/: rpc_latency_benchmark.cxx  rpc_latency_overlapping_benchmark.cxx
code/prototype/src/utils/: fibers.cpp  timer.cpp
code/prototype/src/work/: fiber_service.cpp  optimizer.cpp  schedule_policy.cpp  scheduler.cpp  task.cpp  task_dependency.cpp  task_id.cpp  task_requirements_collector.cpp  task_statistic.cpp  treeture.cpp  tuner.cpp  work_queue.cpp  worker.cpp
code/prototype/test/com/: hierarchy_test.cc  network_test.cc  node_test.cc  rpc_benchmark.cc
code/prototype/test/com/mpi/: network_test.cc
code/prototype/test/com/sim/: network_test.cc
code/prototype/test/data/: data_fragment_manager_test.cc  data_item_location_test.cc  data_item_manager_test.cc  data_item_migration_test.cc  data_item_reference_test.cc  data_item_region_test.cc  data_item_requirement_test.cc
code/prototype/test/examples/basic/: empty.cxx  empty_main.cxx  fib.cxx
code/prototype/test/examples/benchmarks/: stencil_2d_hashes.cxx  stencil_2d_hashes_fg.cxx  stencil_2d_hashes_kill_cycles.inc
code/prototype/test/examples/pfor/: empty.cxx  grid_stencil_2d_bench.cxx  stencil_1d.cxx  stencil_2d.cxx  stencil_2d_fine_grained.cxx  stencil_2d_fine_grained.cxx_disabled  stencil_2d_uneven.cxx  vector_add.cxx
code/prototype/test/examples/pilot/: amdados.cxx  ipic3d.cxx  ipic3d.cxx_bak  ipic3d.cxx_bench  ipic3d_bench.cxx  ipic3d_bench_gen.cxx  ipic3d_fine_grained_bench.cxx  pic_tracer.cxx
code/prototype/test/hw/: core.cc  energy.cc  frequency.cc
code/prototype/test/mon/: dashboard_test.cc  monitoring_test.cc
code/prototype/test/utils/: fiber.cc  fibers.cc  scalar.cc  timer.cc
code/prototype/test/utils/fiber/: future.cc  read_write_lock.cc
code/prototype/test/utils/serializer/: functions.cc
code/prototype/test/work/: schedule_policy.cc  task_dependencies_test.cc  task_test.cc  treeture_test.cc  work_queue_test.cc  worker_test.cc
resources/: art_flags.mk.in
scripts/ci/: job_allscale_runtime_prototype
